--- a/css/style.css
+++ b/css/style.css
@@ -12182,10 +12182,10 @@ html [class*='section-'].section-top-0 {
 }
 
 @media (min-width: 1600px) {
-	.section-fluid {
+	/* .section-fluid {
 		padding-left: 75px;
 		padding-right: 75px;
-	}
+	} */
 	.section-fluid .container-fluid {
 		padding-left: 0;
 		padding-right: 0;
